--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,42 @@ body{
 .banner-section{
 	margin-top: 22.5px;
 	width: 1170px;
+	margin-bottom: 120px;
+}
+.wrapper{
+	margin-top: 120px;
+}
+.wrapper-box{
+	margin-top: 30px;
+	margin-bottom: 65px;
+}
+.box{
+	background: #F2F2F2;
+	padding: 15px 30px;
+	display: inline-block;
+}
+.box:first-child{
+	margin-right: 10px;
+}
+.title-h5{
+	color: #3D58A6;
+	margin-bottom: 15px;
+}
+.icon{
+	height: 130px;
+display: inline-block;
+vertical-align: top;
+}
+.text{
+	display: inline-block;
+	width: 250px;
+	margin-left: 55px;
+}
+.title-h4 span{
+	text-transform: uppercase;
+	border-right: 1px solid black;
+	padding-right: 10px;
+	margin-right: 10px;
 }
 /* footer  */
 .footer{
