--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ vertical-align: top;
 
 /* contact container */
 .text-container{
-	text-align: center;
+	text-align: left;
 	padding: 150px 0;
 }
 .text-container .title{
